add method isWinner to check whether player has won the game.